ionos_common/ingress/domains_argo_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domains-argo-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sbx-issuer
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.dome-marketplace.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - argocd.dome-marketplace.io
    secretName: domains-argo-tls-secret
