ionos_common/ingress/domains_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: domains-ingress
  namespace: argocd
  annotations:
# Plain redirect. Working but doesn't solve the problem
    nginx.ingress.kubernetes.io/permanent-redirect: http://dome-marketplace-sbx.org
spec:
  ingressClassName: nginx
  rules:
  - host: dome-marketplace.io
  tls:
  - hosts:
    - dome-marketplace.io
    secretName: domains-tls-secret
